[gd_scene load_steps=9 format=3 uid="uid://d1x830cnhhrct"]

[ext_resource type="Script" path="res://Scripts/Components/heal.gd" id="1_dfd65"]
[ext_resource type="Texture2D" uid="uid://bnje2jvraoc1i" path="res://Ressources/Sprite/Building/Buildinng Sprite Rework/hot_spring.png" id="2_x7hgf"]
[ext_resource type="PackedScene" uid="uid://e51uc8gem23o" path="res://Scenes/UI/context_button.tscn" id="4_640gd"]
[ext_resource type="PackedScene" uid="uid://s1rwooyghkx3" path="res://Scenes/UI/participant_count.tscn" id="4_cwkj7"]
[ext_resource type="Texture2D" uid="uid://dnm053u7gc81t" path="res://Ressources/Sprite/Building/Buildinng Sprite Rework/border_0.png" id="4_dcavd"]
[ext_resource type="Texture2D" uid="uid://ch7p2xnd4ks0b" path="res://Ressources/Sprite/UI/Buttons/button_heal.png" id="5_odly6"]
[ext_resource type="Texture2D" uid="uid://ibequey6feii" path="res://Ressources/Sprite/UI/Buttons/button_heal_pressed.png" id="6_xco2q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kxqyi"]
radius = 33.0792

[node name="HotSping" type="Area2D" groups=["building", "selectable"]]
texture_filter = 1
scale = Vector2(1.3, 1.3)
script = ExtResource("1_dfd65")
allow_all_fighters = true
max_entities = 2

[node name="HealSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_x7hgf")

[node name="HealBorder" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -1
scale = Vector2(2, 2)
texture = ExtResource("4_dcavd")

[node name="HealCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.76923, -0.384617)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_kxqyi")

[node name="ParticipantCount" parent="." instance=ExtResource("4_cwkj7")]

[node name="HealButtonContainer" type="HBoxContainer" parent="."]
z_index = 1
offset_left = -16.0
offset_top = 50.0
offset_right = 16.0
offset_bottom = 83.0

[node name="HealButton" parent="HealButtonContainer" instance=ExtResource("4_640gd")]
layout_mode = 2
toggle_mode = false
texture_normal = ExtResource("5_odly6")
texture_pressed = ExtResource("6_xco2q")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="pressed" from="HealButtonContainer/HealButton" to="." method="_on_heal_button_pressed"]
